tests/sksl/errors/Ossfuzz38944.glsl
### Compilation failed:

error: 1: expected expression, but found ''
error: 1: expected ';', but found ''
2 errors
